[package]
name = "gnss-mgr"
version = "0.3.0"
authors = ["Rene Straub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rust-ini = "0.15"
serial = "0.4.0"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.11"
env_logger = "0.7.1"
chrono = "0.4"
