[package]
name = "gnss-mgr"
version = "0.3.8"
authors = ["Rene Straub <rene.straub@netmodule.com>"]
edition = "2018"

[dependencies]
rust-ini = "0.15"
serial = "0.4.0"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.11"
env_logger = "0.7.1"
chrono = "0.4"
serde_repr = "0.1"

[dependencies.clap]
version = "2.33.0"
default-features = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1       # 100 kB
panic = 'abort'         # 100 kB
